<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SR 4e Probability</string>
    <string name="action_settings">Settings</string>
	<string name="numDice">Number of Dice</string>
	<string name="Threshold">Threshold</string>
	<string name="CalcBtn">Calculate</string>
	<string name="toHit">Chance of Success</string>
	<string name="toGlitch">Chance to Glitch</string>
	<string name="critGlitch">Chance to Critically Glitch</string>
    
</resources>